--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -7,8 +7,8 @@
     <h2 class="text-center text-primary mb-4 animate__animated animate__fadeIn">About Us</h2>
     <div class="row container">
         <p class="fs-4 text-center text-dark animate__animated animate__fadeIn animate__delay-1s bg-light p-4 rounded">
-            Welcome to Amader Shop – your one-stop online destination for everything you need!
-            At Amader Shop, we believe in making life simpler, stylish, and more convenient by bringing the best of fashion, lifestyle, and your essentials right to your doorstep. Whether you're looking for trendy Attar ,Perfume ,Scent, agar,books,ipad and laptop to upgrade your living space, Amader Shop has it all.
+            Welcome to Dairy Baba – your one-stop online destination for everything you need!
+            At Dairy Baba, we believe in making life simpler, stylish, and more convenient by bringing the best of fashion, lifestyle, and your essentials right to your doorstep. Whether you're looking for trendy Attar ,Perfume ,Scent, agar,books,ipad and laptop to upgrade your living space, Amader Shop has it all.
         </p>
     </div>
 
