--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -193,7 +193,7 @@
   <div class="row container mx-auto">
     <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s;">
       <div class="goodnesssec buttermilk smbg">
-        <a href="{% url 'category' 'ML' %}" class="product-link">
+        <a href="{% url 'category' 'MS' %}" class="product-link">
           <div class="goodnessseccont text-center">
             <img src="{% static 'app/images/product/milk-shake-chocolate.png' %}" alt="Scent" class="img-responsive center-block">
             <p class="mlkpro">Milkshake</p>
