--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -12,7 +12,7 @@
         <div class="row justify-content-center">
             <div class="col-md-4 text-center contact-item animate__animated animate__zoomIn animate__delay-1s animate__pulse animate__infinite">
                 <h4 class="fw-bold text-dark" style="font-family: 'Georgia', serif;"> Address</h4>
-                <p class="text-muted" style="font-family: 'Arial', sans-serif;">Amader Shop Head Office<br>Chattogram, Bangladesh</p>
+                <p class="text-muted" style="font-family: 'Arial', sans-serif;">Dairy Baba Head Office<br>Chattogram, Bangladesh</p>
             </div>
             <div class="col-md-4 text-center contact-item animate__animated animate__zoomIn animate__delay-2s">
                 <h4 class="fw-bold text-primary" style="font-family: 'Georgia', serif;"> Phone</h4>
@@ -24,7 +24,7 @@
             <div class="col-md-4 text-center contact-item animate__animated animate__zoomIn animate__delay-3s">
                 <h4 class="fw-bold text-info" style="font-family: 'Georgia', serif;"> Email</h4>
                 <p class="text-muted" style="font-family: 'Arial', sans-serif;">
-                    <a href="mailto:Amader Shopr@gmail.com" class="text-decoration-none text-dark">Amader Shop@gmail.com</a><br>
+                    <a href="mailto:Dairy2baba@gmail.com" class="text-decoration-none text-dark">Dairy2baba@gmail.com</a><br>
                     <span class="text-muted">We’d love to hear from you!</span>
                 </p>
             </div>
